--- a/WebApplearnEF/Web.config
+++ b/WebApplearnEF/Web.config
@@ -13,20 +13,21 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="learnthinksavedbEntities4" connectionString="metadata=res://*/useridthank.csdl|res://*/useridthank.ssdl|res://*/useridthank.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb.database.windows.net;initial catalog=learnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="learnthinksavedbEntities89" connectionString="metadata=res://*/ModelFG.csdl|res://*/ModelFG.ssdl|res://*/ModelFG.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb.database.windows.net;initial catalog=learnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <connectionStrings><add name="learnthinksavedbEntities4" connectionString="metadata=res://*/useridthank.csdl|res://*/useridthank.ssdl|res://*/useridthank.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb.database.windows.net;initial catalog=learnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <add name="learnthinksavedbEntities89" connectionString="metadata=res://*/ModelFG.csdl|res://*/ModelFG.ssdl|res://*/ModelFG.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb.database.windows.net;initial catalog=learnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="learnthinksavedbEntities860" connectionString="metadata=res://*/Model1test676.csdl|res://*/Model1test676.ssdl|res://*/Model1test676.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb.database.windows.net;initial catalog=learnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="learnthinksavedbEntities8" connectionString="metadata=res://*/UserIdModel8.csdl|res://*/UserIdModel8.ssdl|res://*/UserIdModel8.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb.database.windows.net;initial catalog=learnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="backuplearnthinksavedbEntities29Jan2016" connectionString="metadata=res://*/ver2.EFLocalDBModelJan29.csdl|res://*/ver2.EFLocalDBModelJan29.ssdl|res://*/ver2.EFLocalDBModelJan29.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=YOGAS5-530\SQLEXPRESS;initial catalog=learnthinksavedb;persist security info=True;user id=sa;password=Jesus123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="copyofJan" connectionString="metadata=res://*/ver2.EFLocalDBModelJan29.csdl|res://*/ver2.EFLocalDBModelJan29.ssdl|res://*/ver2.EFLocalDBModelJan29.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=YOGAS5-530\SQLEXPRESS;initial catalog=learnthinksavedb;persist security info=True;user id=sa;password=Jesus123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="learnthinksavedbEntities29Jan2016" connectionString="metadata=res://*/ver2.EFLocalDBModelFeb29.csdl|res://*/ver2.EFLocalDBModelFeb29.ssdl|res://*/ver2.EFLocalDBModelFeb29.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb2.database.windows.net;initial catalog=mylearnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="learnthinksavedbEntities29Jan2016" connectionString="metadata=res://*/ver2.EFLocalDBModelJan29.csdl|res://*/ver2.EFLocalDBModelJan29.ssdl|res://*/ver2.EFLocalDBModelJan29.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=YOGAS5-530\SQLEXPRESS;initial catalog=learnthinksavedb;persist security info=True;user id=sa;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AZURElearnthinksavedbEntities29Jan2016" connectionString="metadata=res://*/ver2.EFLocalDBModelFeb29.csdl|res://*/ver2.EFLocalDBModelFeb29.ssdl|res://*/ver2.EFLocalDBModelFeb29.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb2.database.windows.net;initial catalog=mylearnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EFDBModelMar26" connectionString="metadata=res://*/ver2.EFDBModelMar26.csdl|res://*/ver2.EFDBModelMar26.ssdl|res://*/ver2.EFDBModelMar26.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=YOGAS5-530\SQLEXPRESS;initial catalog=learnthinksavedb;persist security info=True;user id=sa;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -34,4 +35,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
