--- a/WebApplearnEF/Web.config
+++ b/WebApplearnEF/Web.config
@@ -25,7 +25,8 @@
     <add name="learnthinksavedbEntities860" connectionString="metadata=res://*/Model1test676.csdl|res://*/Model1test676.ssdl|res://*/Model1test676.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb.database.windows.net;initial catalog=learnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="learnthinksavedbEntities8" connectionString="metadata=res://*/UserIdModel8.csdl|res://*/UserIdModel8.ssdl|res://*/UserIdModel8.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb.database.windows.net;initial catalog=learnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="backuplearnthinksavedbEntities29Jan2016" connectionString="metadata=res://*/ver2.EFLocalDBModelJan29.csdl|res://*/ver2.EFLocalDBModelJan29.ssdl|res://*/ver2.EFLocalDBModelJan29.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=YOGAS5-530\SQLEXPRESS;initial catalog=learnthinksavedb;persist security info=True;user id=sa;password=Jesus123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="learnthinksavedbEntities29Jan2016" connectionString="metadata=res://*/ver2.EFLocalDBModelJan29.csdl|res://*/ver2.EFLocalDBModelJan29.ssdl|res://*/ver2.EFLocalDBModelJan29.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=YOGAS5-530\SQLEXPRESS;initial catalog=learnthinksavedb;persist security info=True;user id=sa;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LocallearnthinksavedbEntities29Jan2016" connectionString="metadata=res://*/ver2.EFLocalDBModelJan29.csdl|res://*/ver2.EFLocalDBModelJan29.ssdl|res://*/ver2.EFLocalDBModelJan29.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=YOGAS5-530\SQLEXPRESS;initial catalog=learnthinksavedb;persist security info=True;user id=sa;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="learnthinksavedbEntities29Jan2016" connectionString="metadata=res://*/ver2.EFLocalDBModelJan29.csdl|res://*/ver2.EFLocalDBModelJan29.ssdl|res://*/ver2.EFLocalDBModelJan29.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=visualimparied06.database.windows.net;initial catalog=learnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="AZURElearnthinksavedbEntities29Jan2016" connectionString="metadata=res://*/ver2.EFLocalDBModelFeb29.csdl|res://*/ver2.EFLocalDBModelFeb29.ssdl|res://*/ver2.EFLocalDBModelFeb29.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mylearnthinksavedb2.database.windows.net;initial catalog=mylearnthinksavedb;persist security info=True;user id=mystudent1;password=Jesus123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="EFDBModelMar26" connectionString="metadata=res://*/ver2.EFDBModelMar26.csdl|res://*/ver2.EFDBModelMar26.ssdl|res://*/ver2.EFDBModelMar26.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=YOGAS5-530\SQLEXPRESS;initial catalog=learnthinksavedb;persist security info=True;user id=sa;password=Jesus123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   
@@ -40,6 +41,18 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
