--- a/WebApplearnEF/WebApplearnEF.csproj
+++ b/WebApplearnEF/WebApplearnEF.csproj
@@ -84,6 +84,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -99,6 +103,30 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -116,7 +144,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="HtmlPage1.html" />
+    <Content Include="HtmlPage2.html" />
+    <Content Include="HtmlPage3.html" />
     <Content Include="packages.config" />
+    <Content Include="try1\WebForm1.aspx" />
     <Content Include="ver1\Alarm03.wav" />
     <Content Include="ver1\Alarm06.wav" />
     <Content Include="ver1\Ring02.wav" />
@@ -170,6 +201,7 @@
     <Content Include="ver2\WhatisInaPhoneCoachingSession.aspx" />
     <Content Include="WebForm1.aspx" />
     <Content Include="webformsver1\login.aspx" />
+    <None Include="Properties\PublishProfiles\Apr23.pubxml" />
     <None Include="Properties\PublishProfiles\learningef %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\learningef.pubxml" />
     <None Include="Properties\PublishProfiles\learnsave %282%29.pubxml" />
@@ -218,6 +250,21 @@
     <Content Include="ver2\twilio\TrackAnOutboundCall.ashx" />
     <Content Include="ver2\kookoo\adddnewuser.ashx" />
     <Content Include="ver2\kookoo\adddnewusersteps.ashx" />
+    <None Include="Properties\PublishProfiles\visualJun17.pubxml" />
+    <None Include="Properties\PublishProfiles\WebApplearnEF20170423064835 - Web Deploy %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\WebApplearnEF20170423064835 - Web Deploy.pubxml" />
+    <Content Include="ver2\kookoo\askaquestion.ashx" />
+    <Content Include="ver2\kookoo\KooWelcome - Copy %282%29.ashx" />
+    <None Include="Properties\PublishProfiles\WebApplearnEF20170506084052 - Web Deploy %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\WebApplearnEF20170506084052 - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\WebApplearnEF20170506084707 - Web Deploy.pubxml" />
+    <Content Include="ver4\kookoo\KooWelcome.ashx" />
+    <Content Include="ver2\kookoo\completedaQuestion.ashx" />
+    <Content Include="ver2\kookoo\startorContinueQuizNOTWORKS.ashx" />
+    <Content Include="ver2\kookoo\ContinueQuiz.ashx" />
+    <Content Include="ver2\kookoo\ContinueQuizGOODWORKING.ashx" />
+    <Content Include="ver2\kookoo\JustCalledStartQuizzing.ashx" />
+    <None Include="Properties\PublishProfiles\WebApplearnEF20170624062704 - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -232,6 +279,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Code\User.cs" />
+    <Compile Include="try1\WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="try1\WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ver2\AddaQuestion.aspx.cs">
       <DependentUpon>AddaQuestion.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -329,6 +383,7 @@
     <Compile Include="ver2\HomePage.aspx.designer.cs">
       <DependentUpon>HomePage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ver2\kookoo\QuestionDetails.cs" />
     <Compile Include="ver2\kookoo\StudentStatus.cs" />
     <Compile Include="ver2\kookoo\UtilitiesClasses.cs" />
     <Compile Include="ver2\ListofQuestionPapersTAB.cs">
@@ -435,7 +490,9 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Upload\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
