--- a/WebApplearnEF/WebApplearnEF.csproj
+++ b/WebApplearnEF/WebApplearnEF.csproj
@@ -201,10 +201,16 @@
     <Content Include="ver2\WhatisInaPhoneCoachingSession.aspx" />
     <Content Include="WebForm1.aspx" />
     <Content Include="webformsver1\login.aspx" />
-    <None Include="Properties\PublishProfiles\Apr23.pubxml" />
-    <None Include="Properties\PublishProfiles\learningef %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\Apr23.pubxml">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Properties\PublishProfiles\learningef %282%29.pubxml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\PublishProfiles\learningef.pubxml" />
-    <None Include="Properties\PublishProfiles\learnsave %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\learnsave %282%29.pubxml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\PublishProfiles\learnsave.pubxml" />
     <None Include="Properties\PublishProfiles\learnthinksave.pubxml" />
     <Content Include="ver1\GetTranscribedText.ashx" />
@@ -226,9 +232,15 @@
       <DependentUpon>EFLocalDBModelJan29.edmx</DependentUpon>
     </Content>
     <Content Include="ver2\My First Project-f4fe667f2d92.json" />
-    <None Include="Properties\PublishProfiles\madepossiblebyJS.pubxml" />
-    <None Include="Properties\PublishProfiles\Mar72017.pubxml" />
-    <None Include="Properties\PublishProfiles\thankyouJmadepossiblebyJandp %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\madepossiblebyJS.pubxml">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Properties\PublishProfiles\Mar72017.pubxml">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Properties\PublishProfiles\thankyouJmadepossiblebyJandp %282%29.pubxml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\PublishProfiles\thankyouJmadepossiblebyJandp %283%29.pubxml" />
     <None Include="Properties\PublishProfiles\thankyouJmadepossiblebyJandp.pubxml" />
     <EntityDeploy Include="ver2\EFLocalDBModelFeb29.edmx">
@@ -265,6 +277,8 @@
     <Content Include="ver2\kookoo\ContinueQuizGOODWORKING.ashx" />
     <Content Include="ver2\kookoo\JustCalledStartQuizzing.ashx" />
     <None Include="Properties\PublishProfiles\WebApplearnEF20170624062704 - Web Deploy.pubxml" />
+    <Content Include="ver2\kookoo\NextQuestion.ashx" />
+    <Content Include="ver2\kookoo\confirmanswerclass.ashx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -383,6 +397,7 @@
     <Compile Include="ver2\HomePage.aspx.designer.cs">
       <DependentUpon>HomePage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ver2\kookoo\Motivational.cs" />
     <Compile Include="ver2\kookoo\QuestionDetails.cs" />
     <Compile Include="ver2\kookoo\StudentStatus.cs" />
     <Compile Include="ver2\kookoo\UtilitiesClasses.cs" />
